tests/ui/coverage-attr/name-value.stderr
error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:11:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:17:5
   |
LL |     #![coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #![coverage(off)]
   |
LL |     #![coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:22:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:31:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |
LL |     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:27:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:41:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |
LL |     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:46:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |
LL |     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:37:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:56:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |
LL |     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:61:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL |     #[coverage(off)]
   |
LL |     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:52:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:67:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |
LL | #[coverage(on)]
   |

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:11:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
...
LL | mod my_mod {}
   | ------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:17:5
   |
LL | / mod my_mod_inner {
LL | |     #![coverage = "off"]
   | |     ^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:22:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
...
LL | struct MyStruct;
   | ---------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:27:1
   |
LL |   #[coverage = "off"]
   |   ^^^^^^^^^^^^^^^^^^^
...
LL | / impl MyStruct {
LL | |     #[coverage = "off"]
LL | |
LL | |
LL | |     const X: u32 = 7;
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:37:1
   |
LL |   #[coverage = "off"]
   |   ^^^^^^^^^^^^^^^^^^^
...
LL | / trait MyTrait {
LL | |     #[coverage = "off"]
LL | |
LL | |
...  |
LL | |     type T;
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:52:1
   |
LL |   #[coverage = "off"]
   |   ^^^^^^^^^^^^^^^^^^^
...
LL | / impl MyTrait for MyStruct {
LL | |     #[coverage = "off"]
LL | |
LL | |
...  |
LL | |     type T = ();
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:41:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
...
LL |     const X: u32;
   |     ------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:46:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
...
LL |     type T;
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:31:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
...
LL |     const X: u32 = 7;
   |     ----------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:56:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
...
LL |     const X: u32 = 8;
   |     ----------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/name-value.rs:61:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
...
LL |     type T = ();
   |     ------------ not a function or closure

error: aborting due to 23 previous errors

For more information about this error, try `rustc --explain E0788`.
